welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:4: error: '=' expected but ';' found.
var j ;
      ^