welcome.lessons.welcome.loopfor.LoopFor.scala.code

var j = 0;
var i = 0;
var j ;

for ( i<- 0 to 7){
	for (j<- 0 to i ){ avance();
	
}
     prendBiscuit();
     for (k<- i to 0 ) recule();
     poseBiscuit();








}